--- a/Projet/MyMusicPlayer/app/src/main/res/values/colors.xml
+++ b/Projet/MyMusicPlayer/app/src/main/res/values/colors.xml
@@ -3,4 +3,21 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#FFBDBDBD</color>
+    <color name="dark_grey">#757575</color>
+    <color name="alpha_grey">#6E757575</color>
+    <color name="black">#000000</color>
+    <color name="yellow">#FFFFF700</color>
+    <color name="green">#FF64DD17</color>
+    <color name="red">#FFFF0000</color>
+    <color name="blue">#FF0099FF</color>
+    <color name="dark_blue">#FF1E13B9</color>
+    <color name="brown">#FFA16209</color>
+    <color name="orange">#FFFF9500</color>
+    <color name="purple">#FFAE00FF</color>
+    <color name="pink">#ea80fc</color>
+    <color name="cyan">#FF00FFFB</color>
+    <color name="magenta">#FFFF00F7</color>
 </resources>
