Grosse update: utilisation d'un service pour lire la musique + ajout de notifications customisées + ajout de fonctionnalités (play / pause, suivant, précédent, rembobiner, avance rapide ...) + correction de toutes les erreurs fatales

--- a/Projet/MyMusicPlayer/app/src/main/res/layout/song.xml
+++ b/Projet/MyMusicPlayer/app/src/main/res/layout/song.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dp"
-    android:clickable="true" >
+    android:clickable="true"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/album_art"
@@ -14,20 +15,22 @@
         android:contentDescription="@string/album_cover" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="5dp" >
+        android:padding="5dp"
+        android:layout_weight="0.96">
 
         <TextView
             android:id="@+id/song_title"
             android:ellipsize="marquee"
             android:maxLines="1"
+            android:gravity="start"
             android:scrollHorizontally="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:marqueeRepeatLimit="marquee_forever"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#eeeeee"
             android:textSize="15sp"
@@ -41,7 +44,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:marqueeRepeatLimit="marquee_forever"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#eeeeee"
             android:textSize="10sp" />
@@ -54,7 +57,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:marqueeRepeatLimit="marquee_forever"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#eeeeee"
             android:textSize="13sp" />
@@ -70,5 +73,13 @@
     </LinearLayout>
 
 
+    <Button
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="25dp"
+        android:layout_marginEnd="25dp"
+        android:id="@+id/play_button"
+        android:layout_height="20dp"
+        android:layout_width="20dp"
+        android:background="@drawable/play" />
 
 </LinearLayout>
