--- a/Projet/MyMusicPlayer/app/src/main/res/menu/pop_up_menu.xml
+++ b/Projet/MyMusicPlayer/app/src/main/res/menu/pop_up_menu.xml
@@ -5,7 +5,7 @@
 
 	<item
 		android:id="@+id/one"
-		android:title="@string/add_to_playlist"/>
+		android:title="@string/find_album_cover"/>
 
 	<item
 		android:id="@+id/edit"
